MW New Features : Database are supported insert and retrieve result through object.